gitops/dev/deployment-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gtp-translate-bot
  namespace: ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gtp-translate-bot
  template:
    metadata:
      labels:
        app: gtp-translate-bot
    spec:
      containers:
        - name: gtp-translate-bot
          image: alifbank/gpt-translator-service:5d0c281dd765cdeef34a0be8133964629b35e0c5
          imagePullPolicy: Always
          ports:
            - containerPort: 8000  
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
      imagePullSecrets:
        - name: dockercred
