gitops/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gtp-translate-scoring
  namespace: ml
spec:
  ports:
    - port: 8000
      name: gtp-translate-scoring
      protocol: TCP
      targetPort: 8000
  selector:
    app: gtp-translate
